--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     section {
       border-radius: 10px;
-      margin: 75px 0;
+      margin: 30px 0;
       padding: 1px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       border: 1px solid #ccc;
@@ -427,7 +427,8 @@
 
     .label {
       position: absolute;
-      bottom: 0;
+      top: 10px;
+      bottom: 10px;
       left: 50%;
       transform: translate(-50%, 100%);
       font-size: 12px;
@@ -1497,7 +1498,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="/Obondium Workspace /obondiumworkspacelogo.jpg" alt="logo Image">
+      <img src="derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/obondiumworkspacelogo.jpg" alt="logo Image">
       <h1 id="logo-name">Obondium Workspace</h1>
     </div>
 
