--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     section {
       border-radius: 10px;
-      margin: 30px 0;
+      margin: 20px 0;
       padding: 1px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       border: 1px solid #ccc;
@@ -106,13 +106,6 @@
     .section:active {
       transform: translateY(-5px);
     }
-
-
-
-
-
-
-
 
 
     summary::-webkit-details-marker {
@@ -552,9 +545,11 @@
 
     #our-project {
       background-color: navy;
-      background-image: url("/Obondium Workspace /obondiumlogo.jpg");
+      background-image: url("https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/obondiumlogo.jpg");
       padding: 20px 5px;
       margin-bottom: px;
+      background-size: cover;
+      background-repeat: no-repeat;
     }
 
     #our-project h1 {
@@ -1078,11 +1073,6 @@
     #updates .accordion-content details {
       margin-top: 10px;
     }
-
-
-
-
-
 
 
     /* Feedback section */
@@ -1655,7 +1645,7 @@
       </details>
     </section>
 
-    <br><br>
+    <br>
 
 
     <section id="join-us">
@@ -1727,7 +1717,7 @@
         <h3>Our Team</h3>
         <ul class="founder">
           <li id="image-container">
-            <img src="/Obondium Workspace /derickbond .jpg" alt="Obondo Derick Omondi">
+            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/derickbond%20.jpg" alt="Obondo Derick Omondi">
             <h4>Obondo Derick Omondi</h4>
             <p id="rank" style="color: green">Founder</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Developer and Designer | Self taught.</p>
@@ -1742,14 +1732,14 @@
 
         <ul class="contributors">
           <li id="image-container" id="founder">
-            <img src="/Obondium Workspace /emanuelawino.jpg" alt="Emmanuel Awino Omondi">
+            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/emanuelawino.jpg" alt="Emmanuel Awino Omondi">
             <h4>Emmanuel Awino Omondi</h4>
             <p id="rank">Contributor</p>
 
             <p id="info">Software Engineering Student at Multimedia University</p>
 
             <div class="link">
-              <p> class="fab fa-twitter"> Twitter:<a href="https://twitter.com/AwinoEmanuel?t=Y94E5qHnN2POFTc8ph5Z0g&s=09">@AwinoEmanuel</a></p>
+              <p class="fab fa-twitter"> Twitter:<a href="https://twitter.com/AwinoEmanuel?t=Y94E5qHnN2POFTc8ph5Z0g&s=09">@AwinoEmanuel</a></p>
               <p><a href=""></a></p>
             </div>
             <p style="color: saddlebrown">No contribution yet</p>
@@ -1757,7 +1747,7 @@
           </li>
 
           <li id="image-container">
-            <img src="/Obondium Workspace /markhekima.jpg" alt="Mark Hekima">
+            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/markhekima.jpg" alt="Mark Hekima">
             <h4>Mark Hekima</h4>
             <p id="rank">Contributor</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Designer and Developer | Self-taught</p>
@@ -1769,7 +1759,7 @@
           </li>
 
           <li id="image-container">
-            <img src="/Obondium Workspace /reaganmogambi.jpg" alt="Reagan Mogambi">
+            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/reaganmogambi.jpg" alt="Reagan Mogambi">
             <h4>Reagan Mogambi</h4>
             <p id="rank">Contributor</p>
             <p style="color: black">No contribution yet</p>
@@ -1895,7 +1885,7 @@
         <div class="donation-methods">
           <div class="donation-method">
             <a href="https://www.mchanga.africa/fundraiser/68835" target="">
-              <img src="/Obondium Workspace /mchangawide.png" alt="M-Changa">Donate Now
+              <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/mchangawide.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
             </a>
           </div>
 
@@ -1934,7 +1924,7 @@
     <div class="partners">
       <h2>Our Partners</h2>
       <div class="partner">
-        <img src="/Obondium Workspace /obondiumlogo.jpg" alt="Partner 1 Logo">
+        <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/obondiumlogo.jpg" alt="Partner 1 Logo">
         <div class="partner-details">
           <h3>Obondium</h3>
           <p>The Parent Company</p>
