--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 
     #our-project {
       background-color: navy;
-      background-image: url("https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/obondiumlogo.jpg");
+      background-image: url("https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/obondiumlogo.jpg");
       padding: 20px 5px;
       margin-bottom: px;
       background-size: cover;
@@ -1488,7 +1488,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/obondiumworkspacelogo.jpg" alt="logo Image">
+      <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/obondiumworkspacelogo.jpg" alt="logo Image">
       <h1 id="logo-name">Obondium Workspace</h1>
     </div>
 
@@ -1717,7 +1717,7 @@
         <h3>Our Team</h3>
         <ul class="founder">
           <li id="image-container">
-            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/derickbond%20.jpg" alt="Obondo Derick Omondi">
+            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/derickbond%20.jpg" alt="Obondo Derick Omondi">
             <h4>Obondo Derick Omondi</h4>
             <p id="rank" style="color: green">Founder</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Developer and Designer | Self taught.</p>
@@ -1732,7 +1732,7 @@
 
         <ul class="contributors">
           <li id="image-container" id="founder">
-            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/emanuelawino.jpg" alt="Emmanuel Awino Omondi">
+            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/emanuelawino.jpg" alt="Emmanuel Awino Omondi">
             <h4>Emmanuel Awino Omondi</h4>
             <p id="rank">Contributor</p>
 
@@ -1747,7 +1747,7 @@
           </li>
 
           <li id="image-container">
-            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/markhekima.jpg" alt="Mark Hekima">
+            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/markhekima.jpg" alt="Mark Hekima">
             <h4>Mark Hekima</h4>
             <p id="rank">Contributor</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Designer and Developer | Self-taught</p>
@@ -1759,7 +1759,7 @@
           </li>
 
           <li id="image-container">
-            <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/reaganmogambi.jpg" alt="Reagan Mogambi">
+            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/reaganmogambi.jpg" alt="Reagan Mogambi">
             <h4>Reagan Mogambi</h4>
             <p id="rank">Contributor</p>
             <p style="color: black">No contribution yet</p>
@@ -1885,7 +1885,7 @@
         <div class="donation-methods">
           <div class="donation-method">
             <a href="https://www.mchanga.africa/fundraiser/68835" target="">
-              <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/mchangawide.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
+              <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/mchangawide.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
             </a>
           </div>
 
@@ -2174,13 +2174,6 @@ joinUsForm.addEventListener('submit', (e) => {
   // Add your form submission code here
 
 });
-
-
-
-
-
-
-
 
 
 
