--- a/index.html
+++ b/index.html
@@ -544,8 +544,9 @@
 
 
     #our-project {
+      padding: 30px 0;
       background-color: navy;
-      background-image: url("https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/obondiumlogo.jpg");
+      background-image: url("https://github.com./obondiumlogo.jpg");
       padding: 20px 5px;
       margin-bottom: px;
       background-size: cover;
@@ -765,6 +766,7 @@
     }
 
     .join-us-form {
+      margin: 30px 0;
       padding: 30px 10px;
       background-color: gainsboro;
       border: 1px solid #ccc;
@@ -1488,7 +1490,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/obondiumworkspacelogo.jpg" alt="logo Image">
+      <img src="./Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/obondiumworkspacelogo.jpg" alt="logo Image">
       <h1 id="logo-name">Obondium Workspace</h1>
     </div>
 
@@ -1717,7 +1719,7 @@
         <h3>Our Team</h3>
         <ul class="founder">
           <li id="image-container">
-            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/derickbond%20.jpg" alt="Obondo Derick Omondi">
+            <img src="./derickbond.jpg" alt="Obondo Derick Omondi">
             <h4>Obondo Derick Omondi</h4>
             <p id="rank" style="color: green">Founder</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Developer and Designer | Self taught.</p>
@@ -1732,7 +1734,7 @@
 
         <ul class="contributors">
           <li id="image-container" id="founder">
-            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/emanuelawino.jpg" alt="Emmanuel Awino Omondi">
+            <img src="./emanuelawino.jpg" alt="Emmanuel Awino Omondi">
             <h4>Emmanuel Awino Omondi</h4>
             <p id="rank">Contributor</p>
 
@@ -1747,7 +1749,7 @@
           </li>
 
           <li id="image-container">
-            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/markhekima.jpg" alt="Mark Hekima">
+            <img src="./markhekima.jpg" alt="Mark Hekima">
             <h4>Mark Hekima</h4>
             <p id="rank">Contributor</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Designer and Developer | Self-taught</p>
@@ -1759,7 +1761,8 @@
           </li>
 
           <li id="image-container">
-            <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/reaganmogambi.jpg" alt="Reagan Mogambi">
+ 
+           <img src="./reaganmogambi.jpg" alt="Reagan Mogambi">
             <h4>Reagan Mogambi</h4>
             <p id="rank">Contributor</p>
             <p style="color: black">No contribution yet</p>
@@ -1885,7 +1888,7 @@
         <div class="donation-methods">
           <div class="donation-method">
             <a href="https://www.mchanga.africa/fundraiser/68835" target="">
-              <img src="https://github.com/derickbond/Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/mchangawide.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
+              <img src="https://github.com/derickbond/Obondium-Work/mchanga.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
             </a>
           </div>
 
@@ -1898,7 +1901,7 @@
 
           <div class="donation-method disabled">
             <a href="#">
-              <img src="/Obondium Workspace /donorbox.png" alt="Donorbox">
+              <img src="./donorbox.png" alt="Donorbox">
             </a>
             <p>Donorbox (coming soon)</p>
           </div>
@@ -1924,7 +1927,8 @@
     <div class="partners">
       <h2>Our Partners</h2>
       <div class="partner">
-        <img src="https://github.com/derickbond/obondiumworkspace/blob/51a6078ddcf811d4d222ce666b0f023daed82646/obondiumlogo.jpg" alt="Partner 1 Logo">
+        
+       <img src=". /obondiumlogo.jpg" alt="Partner 1 Logo">
         <div class="partner-details">
           <h3>Obondium</h3>
           <p>The Parent Company</p>
