--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     #our-project {
       padding: 30px 0;
       background-color: navy;
-      background-image: url("https://github.com./obondiumlogo.jpg");
+      background-image: url("obondiumlogo.jpg");
       padding: 20px 5px;
       margin-bottom: px;
       background-size: cover;
@@ -1490,7 +1490,7 @@
 
   <header>
     <div class="logo-container">
-      <img src="./Obondium-Workspace/blob/8244b490e505c769454e71568a6ea92cf10bba3f/obondiumworkspacelogo.jpg" alt="logo Image">
+      <img src="obondiumworkspacelogo.jpg" alt="logo Image">
       <h1 id="logo-name">Obondium Workspace</h1>
     </div>
 
@@ -1650,7 +1650,7 @@
     <br>
 
 
-    <section id="join-us">
+    <div id="join-us">
       <details>
         <summary>
           <div class="join-us-details">
@@ -1705,7 +1705,7 @@
         <div class="join-us-message hidden resubmission-message">
           <p>It seems that you have already submitted your details. We will get back to you soon.</p>
         </div>
-      </section>
+      </div>
 
     </section>
 
@@ -1719,7 +1719,7 @@
         <h3>Our Team</h3>
         <ul class="founder">
           <li id="image-container">
-            <img src="./derickbond.jpg" alt="Obondo Derick Omondi">
+            <img src="derickbond.jpg" alt="Obondo Derick Omondi">
             <h4>Obondo Derick Omondi</h4>
             <p id="rank" style="color: green">Founder</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Developer and Designer | Self taught.</p>
@@ -1734,7 +1734,7 @@
 
         <ul class="contributors">
           <li id="image-container" id="founder">
-            <img src="./emanuelawino.jpg" alt="Emmanuel Awino Omondi">
+            <img src="emanuelawino.jpg" alt="Emmanuel Awino Omondi">
             <h4>Emmanuel Awino Omondi</h4>
             <p id="rank">Contributor</p>
 
@@ -1749,7 +1749,7 @@
           </li>
 
           <li id="image-container">
-            <img src="./markhekima.jpg" alt="Mark Hekima">
+            <img src="markhekima.jpg" alt="Mark Hekima">
             <h4>Mark Hekima</h4>
             <p id="rank">Contributor</p>
             <p id="info">Marine Engineering Student at Technical University of Mombasa <br> Web Designer and Developer | Self-taught</p>
@@ -1762,7 +1762,7 @@
 
           <li id="image-container">
  
-           <img src="./reaganmogambi.jpg" alt="Reagan Mogambi">
+           <img src="reaganmogambi.jpg" alt="Reagan Mogambi">
             <h4>Reagan Mogambi</h4>
             <p id="rank">Contributor</p>
             <p style="color: black">No contribution yet</p>
@@ -1888,7 +1888,7 @@
         <div class="donation-methods">
           <div class="donation-method">
             <a href="https://www.mchanga.africa/fundraiser/68835" target="">
-              <img src="https://github.com/derickbond/Obondium-Work/mchanga.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
+              <img src="mchanga.png" alt="M-Changa"><span style="font-size:20px; color: purple;">Donate  Now</span>
             </a>
           </div>
 
@@ -1928,7 +1928,7 @@
       <h2>Our Partners</h2>
       <div class="partner">
         
-       <img src=". /obondiumlogo.jpg" alt="Partner 1 Logo">
+       <img src="obondiumlogo.jpg" alt="Partner 1 Logo">
         <div class="partner-details">
           <h3>Obondium</h3>
           <p>The Parent Company</p>
