--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
     .logo-container {
       display: flex;
-      width: 50%;
+      width: 80%;
       align-items: center;
       gap: 2px;
       left: 0;
@@ -182,7 +182,8 @@
 
     #logo-name {
       color: ghostwhite;
-      width: 60%;
+      width: 80%;
+      text-align: left;
       padding-left: 10px;
       font-size: 48px;
       letter-spacing: 2px;
@@ -273,7 +274,7 @@
         left: 0;
         top: 0;
         z-index: 1;
-        width: 60%;
+        width: 80%;
         border: none;
       }
 
@@ -318,6 +319,8 @@
       }
 
       #logo-name {
+        text-align: left;
+        width: 100%;
         color: ghostwhite;
         padding: 10px 5px;
         font-size: 24px;
