--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="logo-container">
 
-      <img src="./images/obondiumworkspacelogo.jpg" alt="logo Image">
+      <img src="obondiumworkspacelogo.jpg" alt="logo Image">
 
       <h1 id="logo-name">Obondium Workspace</h1>
 
@@ -452,7 +452,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container">
 
-            <img src="./images/derickbond .jpg" alt="Obondo Derick Omondi">
+            <img src="derickbond .jpg" alt="Obondo Derick Omondi">
 
             <h4>Obondo Derick Omondi</h4>
 
@@ -480,7 +480,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container" id="founder">
 
-            <img src="./images/emanuelawino.jpg" alt="Emmanuel Awino Omondi">
+            <img src="emanuelawino.jpg" alt="Emmanuel Awino Omondi">
 
             <h4>Emmanuel Awino Omondi</h4>
 
@@ -504,7 +504,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container">
 
-            <img src="./images/markhekima.jpg" alt="Mark Hekima">
+            <img src="markhekima.jpg" alt="Mark Hekima">
 
             <h4>Mark Hekima</h4>
 
@@ -526,7 +526,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container">
 
-            <img src="./images/reaganmogambi.jpg" alt="Reagan Mogambi">
+            <img src="reaganmogambi.jpg" alt="Reagan Mogambi">
 
             <h4>Reagan Mogambi</h4>
 
@@ -546,7 +546,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container">
 
-            <img src="./images/charlestonoyoo.jpg" alt="Charleston Oyoo">
+            <img src="charlestonoyoo.jpg" alt="Charleston Oyoo">
 
             <h4>Charleston Oyoo</h4>
 
@@ -566,7 +566,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container">
 
-            <img src="./images/collinsruto.jpg" alt="Collins Ruto">
+            <img src="collinsruto.jpg" alt="Collins Ruto">
 
             <h4>Collins Ruto</h4>
 
@@ -586,7 +586,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <li id="image-container">
 
-            <img src="./images/mwangangijoshua.jpg" alt="Mwangangi Joshua">
+            <img src="mwangangijoshua.jpg" alt="Mwangangi Joshua">
 
             <h4>Mwangangi Joshua</h4>
 
@@ -862,7 +862,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
           <a href="#">
 
-            <img src="./donorbox.png" alt="Donorbox">
+            <img src="donorbox.png" alt="Donorbox">
 
           </a>
 
@@ -908,7 +908,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
 
         <div class="partner">
 
-          <img src="./images/obondiumlogo.jpg" alt="Obondium">
+          <img src="obondiumlogo.jpg" alt="Obondium">
 
           <div class="partner-details">
 
