--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 <link rel="stylesheet" href="./main.css">
+  
+  <!-- Start of ChatBot (www.chatbot.com) code -->
+
+<script type="text/javascript">
+
+    window.__be = window.__be || {};
+
+    window.__be.id = "645fd8cd3b9afc0007565778";
+
+    (function() {
+
+        var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+
+        be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
+
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+
+    })();
+
+</script>
+
+<!-- End of ChatBot code -->
 
   </head>
 
@@ -951,7 +973,7 @@ Obondium&nbsp;|&nbsp;© 2023 Obondium. All rights reserved.">
     </div>
 
   </footer>
-<script src="chatbot.js"></script>
+
 <script src="main.js"></script>
 </body>
 
